fix: Show error message if tei limit reached [DHIS2-13281]